lib/src/compiler/tests/testdata/errors/72.out
error[E001]: syntax error
 --> line:1:24
  |
1 | rule test { condition: }
  |                        ^ expected boolean expression
  |